update swagger api docs for schemas
