# app/Http/Controllers/Category/UpdateCategoryByIdController.php
@@ -2,8 +2,7 @@
 
 namespace App\Http\Controllers\Category;
 
-use App\Http\Controllers\Category\CategoryController;
-use App\Http\Requests\UpdateCategoryRequest;
+use App\Http\Requests\Category\UpdateCategoryRequest;
 
 class UpdateCategoryByIdController extends CategoryController {
     public function __invoke(int $categoryId, UpdateCategoryRequest $request) {
