# app/Http/Resources/CategoryResource.php
@@ -5,11 +5,6 @@ namespace App\Http\Resources;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 
-/**
- * @OA\Schema(
- *     schema="Category"
- * )
- */
 class CategoryResource extends JsonResource
 {
     /**
